--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -259,7 +259,7 @@
                 </tr>
             </thead>    
             <tbody>
-                {% for row in course_data %}
+                {% for row in exam_data %}
                     <tr>
                         <td>{{ loop.index }}</td>
                         <td>
