--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -190,6 +190,14 @@
                             [{{ dept.departmentCode }}] {{ dept.departmentName }}
                         </option>
                     {% endfor %}
+                </select><br>
+
+                <label>Staff Status</label>
+                <select id="editStatus" name="editStatus" required>
+                    <option value="" disabled selected>Select Status</option>
+                    <option value="1">Activated</option>
+                    <option value="0">Deactivated</option>
+                    <option value="2">Deleted</option>
                 </select>
             </div>
         </div> 
@@ -298,6 +306,7 @@
                     document.getElementById("editUsername").value = data.userName || "";
                     document.getElementById("editEmail").value = data.userEmail || "";
                     document.getElementById("editContact").value = data.userContact || "";
+                    document.getElementById("editStatus").value = data.userStatus || "";
 
                     // Set Gender
                     const genderSelect = document.getElementById("editGender");
