--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -379,7 +379,7 @@
     );
 
     createPieChart('statusPieChart',
-        ['Activated', 'Deactivated'],
+        ['Activated', 'Deactivated', 'Deleted'],
         [{{ total_activated }}, {{ total_deactivate }}, {{ total_deleted }}],
          defaultColors, defaultBorders,'Account Status'
     );
