--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -359,9 +359,19 @@
             options: {
                 responsive: true,
                 plugins: {
-                    legend: { position: 'right' }
+                    legend: { position: 'right' },
+                    datalabels: {
+                        formatter: (value, context) => {
+                            let sum = context.chart.data.datasets[0].data.reduce((a, b) => a + b, 0);
+                            let percentage = ((value / sum) * 100).toFixed(1) + "%";
+                            return percentage;
+                        },
+                        color: '#fff',
+                        font: { weight: 'bold' }
+                    }
                 }
-            }
+            },
+            plugins: [ChartDataLabels]  // enable plugin
         });
     }
 
