--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -202,8 +202,17 @@
         options: {
             responsive: true,
             plugins: {
-                legend: {
-                    position: 'bottom'
+                legend: { position: 'bottom' },
+                tooltip: {
+                    callbacks: {
+                        label: function (context) {
+                            let data = context.dataset.data;
+                            let sum = data.reduce((a, b) => a + b, 0);
+                            let value = context.parsed;
+                            let percentage = ((value / sum) * 100).toFixed(1) + "%";
+                            return context.label + ": " + value + " (" + percentage + ")";
+                        }
+                    }
                 }
             }
         }
