--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -108,10 +108,10 @@
                 </select><br>
 
                 <label>Course Practical Lecturer</label>
-                <input type="text" id="practicalLecturer" name="practicalLecturer" readonly><br>
+                <input type="text" id="examPracticalLecturer" name="practicalLecturer" readonly><br>
 
                 <label>Course Tutorial Lecturer</label>
-                <input type="text" id="tutorialLecturer" name="tutorialLecturer" readonly>
+                <input type="text" id="examTutorialLecturer" name="tutorialLecturer" readonly>
             </div> 
 
             <div class="form-right" style="margin: auto;">
