--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -381,6 +381,7 @@ input, select{
     grid-template-columns: 1fr 1fr 1fr 1fr; /* 4 columns */
     gap: 20px; 
     margin-bottom: 20px;
+    margin: auto;
 }
 
 /* Pie chart takes first column and spans 2 rows */
