--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -16,7 +16,7 @@
 
             <!-- Overview -->
             <div class="dashboard-row">
-                <div class="dashboard-frame pie" style="margin: auto;">
+                <div class="dashboard-frame pie">
                     <h3>Total Departments</h3>
                     <p class="dashboard-text">{{ total_department }}</p>
                 </div>
