--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -15,8 +15,8 @@
         <div class="form-left" style="width: 100%">
 
             <!-- Overview -->
-            <div class="dashboard-row">
-                <div class="dashboard-frame pie">
+            <div class="dashboard-row" style="grid-template-columns: 1fr 1fr 1fr;">
+                <div class="dashboard-frame">
                     <h3>Total Timetable Sets</h3>
                     <p class="dashboard-text">{{ total_timetable }}</p>
                 </div>
