--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -9,7 +9,7 @@
 
 {% block dashboard_section %}
 <form id="dashboardForm" action="{{ url_for('admin_manageExam') }}" method="POST">
-    <div id="dashboardSection" style="width: 90%; margin:auto;">
+    <div id="dashboardSection" style="width: 90%; margin:auto; padding:1%">
         <input type="hidden" name="form_type" value="dashboard">
         <div class="form-left" style="width: 100%">
 
