--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -14,29 +14,29 @@
         <input type="hidden" name="form_type" value="dashboard">
         <div class="form-left" style="width: 100%">
 
-            <div class="dashboard-row" style="grid-template-columns: 1fr 1fr 1fr;">
+            <div class="dashboard-row" style="grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;">
                 <div class="dashboard-frame">
                     <h3>Total Timetable Sets</h3>
                     <p class="dashboard-text">{{ total_timetable }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Monday Scheduled Classes</h3>
+                    <h3>Monday<br>Scheduled Classes</h3>
                     <p class="dashboard-text">{{ mon_timetable }}</p>
                 </div>                
                 <div class="dashboard-frame">
-                    <h3>Tuesday Scheduled Classes</h3>
+                    <h3>Tuesday<br>Scheduled Classes</h3>
                     <p class="dashboard-text">{{ tue_timetable }}</p>
                 </div>                
                 <div class="dashboard-frame">
-                    <h3>Wednesday Scheduled Classes</h3>
+                    <h3>Wednesday<br>Scheduled Classes</h3>
                     <p class="dashboard-text">{{ wed_timetable }}</p>
                 </div>                
                 <div class="dashboard-frame">
-                    <h3>Thursday Scheduled Classes</h3>
+                    <h3>Thursday<br>Scheduled Classes</h3>
                     <p class="dashboard-text">{{ thu_timetable }}</p>
                 </div>                
                 <div class="dashboard-frame">
-                    <h3>Friday Scheduled Classes</h3>
+                    <h3>Friday<br>Scheduled Classes</h3>
                     <p class="dashboard-text">{{ fri_timetable }}</p>
                 </div>
             </div>
