--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -16,28 +16,28 @@
 
             <div class="dashboard-row" style="grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;">
                 <div class="dashboard-frame">
-                    <h3>Total Timetable Sets</h3>
-                    <p class="dashboard-text">{{ total_timetable }}</p>
+                    <h3>Total Timetable<br>Sets</h3>
+                    <p class="dashboard-text" style="color:#1E90FF">{{ total_timetable }}</p>
                 </div>
                 <div class="dashboard-frame">
                     <h3>Monday<br>Scheduled Classes</h3>
-                    <p class="dashboard-text">{{ mon_timetable }}</p>
+                    <p class="dashboard-text" style="color:#007bff">{{ mon_timetable }}</p>
                 </div>                
                 <div class="dashboard-frame">
                     <h3>Tuesday<br>Scheduled Classes</h3>
-                    <p class="dashboard-text">{{ tue_timetable }}</p>
+                    <p class="dashboard-text" style="color:#28a745">{{ tue_timetable }}</p>
                 </div>                
                 <div class="dashboard-frame">
                     <h3>Wednesday<br>Scheduled Classes</h3>
-                    <p class="dashboard-text">{{ wed_timetable }}</p>
+                    <p class="dashboard-text" style="color:#fd7e14">{{ wed_timetable }}</p>
                 </div>                
                 <div class="dashboard-frame">
                     <h3>Thursday<br>Scheduled Classes</h3>
-                    <p class="dashboard-text">{{ thu_timetable }}</p>
+                    <p class="dashboard-text" style="color:#dc3545">{{ thu_timetable }}</p>
                 </div>                
                 <div class="dashboard-frame">
                     <h3>Friday<br>Scheduled Classes</h3>
-                    <p class="dashboard-text">{{ fri_timetable }}</p>
+                    <p class="dashboard-text" style="color:#6f42c1">{{ fri_timetable }}</p>
                 </div>
             </div>
         </div>
