--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -20,7 +20,9 @@
                 </div>
                 <div class="dashboard-frame">
                     <h3>Total Timetables Not Linked to Lecturers</h3>
-                    <p class="dashboard-text" style="color:#1E90FF">{{ total_timetable }}</p>
+                    <p class="dashboard-text" style="color:#1E90FF">
+                        {{ unassigned_count.values()|sum }}
+                    </p>
                 </div>
 
                 {% set days = [
