--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -15,16 +15,15 @@
         <div class="form-left" style="width: 100%">
             <div class="dashboard-row">
                 <div class="dashboard-frame pie">
+                    <h4>Lecturers without Assigned Timetable</h4>
+                    {% for lecturer, count in unassigned_count.items() %}
+                        <li>{{ lecturer }} [{{ count }}]</li>
+                    {% endfor %}
+                </div>
+                
+                <div class="dashboard-frame">
                     <h3>Total TimetableSets</h3>
                     <p class="dashboard-text" style="color:#1E90FF">{{ total_timetable }}</p>
-                </div>
-                <div class="dashboard-frame">
-                    <h4>Lecturers without Assigned Timetable</h4>
-                    <ul>
-                        {% for lecturer, count in unassigned_count.items() %}
-                            <li><strong>{{ lecturer }}</strong> [{{ count }}]</li>
-                        {% endfor %}
-                    </ul>
                 </div>
 
                 {% set days = [
