--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -17,7 +17,7 @@
                 <div class="dashboard-frame pie">
                     <h4>Lecturers without Assigned Timetable</h4>
                     {% for lecturer, count in unassigned_count.items() %}
-                        <li>{{ lecturer }} [{{ count }}]</li>
+                        {{ lecturer }} [{{ count }}]
                     {% endfor %}
                 </div>
                 
